Connectivity widget: fix small table alignment bug
If both tables are being displayed next to each other, one has to make
sure they are vertically aligned to the top. It can otherwise happen,
that one table is displayed with a small gap on top, relative to the
other one.

--- a/django/applications/catmaid/static/widgets/themes/kde/screen.css
+++ b/django/applications/catmaid/static/widgets/themes/kde/screen.css
@@ -450,6 +450,7 @@ div#classification_graph_object img.roiimage {
 .connectivity_widget .table_container_half {
   display: table-cell;
   width: 50%;
+  vertical-align: top;
 }
 
 .connectivity_widget .table_container_wide {
